--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -2,6 +2,9 @@ name: GCC Build and Test
 
 on:
   push:
+    branches:
+      - master
+      - develop
   pull_request:
     branches:
       - master
