--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -16,8 +16,13 @@ jobs:
 
     steps:
       - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install -y make cppcheck
-      
+        run: sudo apt-get update && sudo apt-get install -y make cppcheck locales
+
+      - name: Generate and set locale
+        run: |
+          sudo locale-gen ru_RU.UTF-8
+          sudo update-locale LANG=ru_RU.UTF-8
+
       - name: Use GCC
         uses: Matt-DESTROYER/Use-GCC@v1.2
 
